#JC-1873 Fixed word break descriptions on the main page, removed horizontal scrolling recognazed code

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
@@ -240,17 +240,9 @@ ul.lang-menu li img {
     line-height: 18px;
     font-size: 14px;
 }
-@media (max-width: 979px) {
-    #topics-table .title-col{
-        max-width:200px;
-        word-break:break-all;
-    }
-}
-@media (min-width:980px) {
-    #topics-table .title-col{
-        min-width:200px;
-        word-break:break-all;
-    }
+
+#topics-table .title-col{
+    word-break:break-all;
 }
 
 .wraptocenter {
